--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">RetrofitTest</string>
+    <string name="app_name">Github Repositories</string>
     <string name="str_server_communication_error">Cummunication error</string>
     <string name="str_auth_error">Authorization error</string>
     <string name="has_no_rights_for_archive">Access denied</string>
